--- a/public/stylesheets/sass/users/default.sass
+++ b/public/stylesheets/sass/users/default.sass
@@ -18,6 +18,13 @@
     :background-color rgb(255,255,200)
     :font-size 12px
 
+.show_users
+  .comment, .upload
+    .info
+      :display none
+    .block
+      :width 620px
+
 .invitations
   :padding 5px
       
