--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -52,6 +52,7 @@
         :padding 5px 8px
         :margin-right 1px
         :font-size 15px
+        :text-shadow white 0px 1px 1px
         +round_corners
       a:hover
         :color rgb(20,20,20)
@@ -93,6 +94,7 @@
         :padding 4px 10px 6px 8px
         :margin-bottom 0px
         :font-size 14px
+        :text-shadow white 0px 1px 1px
         +round_corners
       a:hover
         :color rgb(0,0,0)
