--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -43,6 +43,9 @@
       :float left
       :display block
       :margin-right 2px
+      :max-width 170px
+      :white-space nowrap
+      :overflow hidden
       +round_corners
       a  
         :float left
