Gravatar will be displayed if avatar is not present

--- a/app/views/avatars/_micro_avatar.haml
+++ b/app/views/avatars/_micro_avatar.haml
@@ -1,2 +1,2 @@
-.micro_avatar{ :style => "background: url(#{user.avatar.url(:micro)}) no-repeat;" }
+.micro_avatar{ :style => "background: url(#{user.avatar_or_gravatar_url(:micro)}) no-repeat;" }
   %a{ :href => "#{user_path(user)}" }
