--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -4,6 +4,9 @@
   :padding-bottom 5px
 form
   :margin 0px
+  p
+    :margin 10px 0
+    :font-size 12px
 .text_field, .text_area
   :margin-bottom 10px
   label
