Date bump. Minor styling

--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -4,7 +4,8 @@
 - content_for :column do
   = image_tag @user.avatar_or_gravatar_url(:profile), :class => 'avatar'
   - if current_user.observable?(@user)
-    %p.biography= @user.biography
+    - unless @user.biography.empty?
+      %p.biography= @user.biography
     = render_card(@card)
     =# list_projects(@user.projects)
 
