--- a/public/stylesheets/sass/users/show.sass
+++ b/public/stylesheets/sass/users/show.sass
@@ -18,6 +18,7 @@
     h2
       :margin 0px
       :font-size 24px
+      :text-shadow white 0 1px 1px
       span
         :vertical-align middle
       span.login
