Refactoring users, comments and people

--- a/app/views/people/_header.haml
+++ b/app/views/people/_header.haml
@@ -2,8 +2,11 @@
   .name
     %h2
       = user_link(person.user)
-      = person_role(project,person)
+      = "@#{person.user.login}"
     %p  
+      %strong
+        = person_role(project,person)
+    %p
       = time_ago_in_words(person.user.updated_at)
   .actions
     = person_link(project,person)
