--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -17,7 +17,7 @@
       = header
       = global_navigation
       = hot_flashes(flash)
-      = navigation(@current_project,@recent_projects)
+      = navigation(@current_project,current_user.recent_projects)
       .wrapper
         - unless location_name?(['welcome_users','new_projects','show_users','edit_users','new_avatars','index_invitations'])
           = project_navigation(@current_project)
