--- a/app/views/shared/_project_settings_navigation.erb
+++ b/app/views/shared/_project_settings_navigation.erb
@@ -2,7 +2,7 @@
 render_tabnav :project do 
     add_tab do |t|
       t.named t('.general')
-      t.links_to project_settings_path
+      t.links_to project_settings_path :project_id => @current_project.permalink
       t.highlights_on :controller => 'projects', :action => 'edit', :sub_action => 'settings'
     end  
 
@@ -14,7 +14,7 @@ render_tabnav :project do
 
     add_tab do |t|
       t.named t('.deletion')
-      t.links_to project_deletion_path
+      t.links_to project_deletion_path :project_id => @current_project.permalink
       t.highlights_on :controller => 'projects', :action => 'edit', :sub_action => 'deletion'
       t.li_class = 'deletion'
     end    
