added check box onto Profile/Notifications page to toggle if user wants to receive daily notifs about assigned tasks

--- a/app/views/users/_fields.haml
+++ b/app/views/users/_fields.haml
@@ -98,5 +98,9 @@
     .check_box.notify
       = f.check_box :notify_tasks
       = f.label :notify_tasks, t('.notify_tasks')
+    .check_box.notify
+      = f.check_box :wants_task_reminder
+      = f.label :wants_task_reminder, t('.wants_task_reminder')
+    
 
 = hidden_field_tag 'sub_action', sub_action
