--- a/public/stylesheets/sass/pages/notes.sass
+++ b/public/stylesheets/sass/pages/notes.sass
@@ -5,6 +5,9 @@
   :padding 10px
   :-moz-border-radius 8px
   :-webkit-border-radius 8px
+  .documentation
+    :font-size 12px
+    :float right
   .text_area
     :padding-right 10px
     textarea
