--- a/app/views/notes/_fields.haml
+++ b/app/views/notes/_fields.haml
@@ -1,3 +1,5 @@
+.documentation
+  = textile_documentation_link
 .name.text_field
   = f.label :name, t('.title'), :size => 74
   = f.text_field :name, :class => 'focus'
