Archived projects UI is now JS
/projects/archived route still works for the API.
The mobile version has been updated as well to point to archived projects.

--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -1,7 +1,9 @@
 - content_for :column do
   = new_project_link
-  = project_column_navigation
   = list_projects(@projects)
+  - unless @sub_action == 'archived'
+    = list_archived_projects(@archived_projects)
+
   = subscribe_to_projects_link
   = #print_projects_link
 
