--- a/public/stylesheets/sass/projects/default.sass
+++ b/public/stylesheets/sass/projects/default.sass
@@ -20,7 +20,7 @@
       :float right
       :color #777
   
-  .project_list
+  .project_list, .archived_project_list
     :margin-top 15px
     :font-size 12px
     .project_link
@@ -31,6 +31,12 @@
     .new_project_link
       a
         :color rgb(150,150,150)
+
+  #project_archived_link
+    :color #999
+    :font-size 12px
+    :margin 15px 0
+    :display block
 
   .subscribe
     :margin-top 15px
