--- a/app/views/projects/index.m.haml
+++ b/app/views/projects/index.m.haml
@@ -3,3 +3,9 @@
     - for project in @projects
       .project
         = link_to project, project_path(project)
+    - if @sub_action == 'archived'
+      .project
+        = link_to "Show Active Projects", projects_path, :style => 'color: #999'
+    - else
+      .project
+        = link_to "Show #{@archived_projects.size} Archived Projects", project_archived_path, :style => 'color: #999'
