--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,6 +9,7 @@
     = stylesheet_link_tag 'application', :media => :screen
     = stylesheet_link_tag 'print', :media => :print
     = sprockets_include_tag
+    = yield :js_includes
     - javascript_tag do
       = yield :js_templates
   %body{ :class => "#{location_name} #{I18n.locale} #{ENV['RAILS_ENV']}"}
