--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -5,7 +5,7 @@
 
 #task_lists  
   = list_task_lists(project,task_lists,sub_action,current_target)
-=# comments_settings
-=# reorder_task_list_link(project,task_lists)
+/ = comments_settings
+/ = reorder_task_list_link(project,task_lists)
 
 = print_task_lists_link(project)
