--- a/app/views/task_lists/_task_list_with_tasks.haml
+++ b/app/views/task_lists/_task_list_with_tasks.haml
@@ -1,5 +1,6 @@
-- content_for :js_includes do
-  = javascript_include_tag "reorder_tasks"
+- if task_list_with_tasks_counter.zero?
+  - content_for :js_includes do
+    = javascript_include_tag "reorder_tasks"
 - tasks = assign_tasks(project,task_list,sub_action)
 .task_list_wrap{ :id => "#{task_list_id(:with_tasks,project,task_list)}", :class => "task_list_#{task_list.id}" }
   = render_task_list(project,task_list,current_target)
