--- a/public/stylesheets/sass/pages.sass
+++ b/public/stylesheets/sass/pages.sass
@@ -106,3 +106,52 @@ div.active_page
     .add_button
       :float left
       :margin 0px
+
+
+#pageInsert
+  :position relative
+  p
+    :background #000
+    :color #e1e1e1
+    :left -70px
+    :top -12px
+    :padding 5px 5px 0px 5px
+    :position absolute
+    :height 25px
+    :z-index 100
+    :cursor pointer
+
+#pageInsertItems
+  :position relative
+
+#pageInsertItemsBar
+  :left -70px
+  :padding-left 70px
+  :padding-top 0px
+  :top 0px
+  :position relative
+  :height 32px
+  :z-index 100
+  :width 100%
+  :background-color #ccc
+
+#pageFormContainer
+  :margin-left 16px
+
+#pageInsertItemCancel
+  :position absolute
+  :left 15px
+
+#pageInsertItemCancel
+  a
+    :color red
+    :font-size 80%
+		
+#pageInsertItemWidgets
+  :padding-left 11px
+
+#pageWidgetForms
+  :display none
+
+.pageSlot
+  :padding 5px 0px
