--- a/app/views/pages/_buttons.haml
+++ b/app/views/pages/_buttons.haml
@@ -1,8 +1,6 @@
 .buttons#buttons
-  = new_page_note_link(project,page)
-  = new_page_divider_link(project,page)
-  = #new_page_task_list_link(project,page)
-  = #new_page_upload_link(project,page)
+  = new_page_note_link(project,page,in_bar)
+  = new_page_divider_link(project,page,in_bar)
+  = #new_page_task_list_link(project,page,in_bar)
+  = #new_page_upload_link(project,page,in_bar)
   .clear
-= new_note_form(project,page)
-= new_divider_form(project,page)
