Reordering now properly ignores the footer

--- a/app/views/dividers/_actions.haml
+++ b/app/views/dividers/_actions.haml
@@ -2,5 +2,8 @@
   %span
     = edit_divider_link(divider)
     = delete_divider_link(divider)
+    =# drag_image
+%p.actions.handle{ :style => "display: none" }
+  %span
     = drag_widget_handle(divider)
     =# drag_image
