--- a/public/stylesheets/sass/pages.sass
+++ b/public/stylesheets/sass/pages.sass
@@ -133,7 +133,7 @@ div.active_page
   :height 32px
   :z-index 100
   :width 100%
-  :background-color #ccc
+  :background-color #ffffff
 
 #pageFormContainer
   :margin-left 16px
@@ -155,3 +155,8 @@ div.active_page
 
 .pageSlot
   :padding 5px 0px
+  :padding-bottom 10px
+.pageSlot.InsertBefore
+  :background-image url(/images/pins.gif)
+  :background-repeat repeat-x
+
