--- a/public/stylesheets/sass/pages/dividers.sass
+++ b/public/stylesheets/sass/pages/dividers.sass
@@ -1,28 +1,32 @@
 .divider
   :background url(../images/divider.jpg) repeat-x center
-  :padding-bottom 5px
   :padding-left 10px
-  :margin 5px 0px
   h3
     :padding-top 3px
     span
       :background rgb(255,255,255)
       :padding 0px 5px
   p.actions
+    :float right
+    :margin 0px
+    a.delete
+      :color red
+  p.handle
     :position relative
     :margin 0px
-    span    
+    :float none
+    span
       :background rgb(255,255,255)
       :-moz-border-radius 4px
       :-webkit-border-radius 4px
       :padding 3px 0px
-        :left 2px
-        :bottom 0px
+      :left 2px
+      :bottom 0px
       :position absolute
       :display block
-      :width 42px
+      :width 32px
       :height 18px
-      :left -52px
+      :left -32px
       :top 2px
 .new_divider, .edit_divider
   :margin-top 5px
