--- a/public/stylesheets/sass/pages/notes.sass
+++ b/public/stylesheets/sass/pages/notes.sass
@@ -17,10 +17,25 @@
     :font-size 12px
     :padding-top 10px
 .note
-  :padding-bottom 5px
-  :margin 5px 0px
   p.actions
     :float right
     :margin 0px
     a.delete
       :color red
+  p.handle
+    :position relative
+    :margin 0px
+    :float none
+    span
+      :background rgb(255,255,255)
+      :-moz-border-radius 4px
+      :-webkit-border-radius 4px
+      :padding 3px 0px
+      :left 2px
+      :bottom 0px
+      :position absolute
+      :display block
+      :width 32px
+      :height 18px
+      :left -32px
+      :top 2px
