Supporting uploads in pages
Alter backend to support uploads in pages
Implement page uploads
JS actions for page uploads

--- a/app/views/pages/_buttons.haml
+++ b/app/views/pages/_buttons.haml
@@ -2,5 +2,5 @@
   = new_page_note_link(project,page,in_bar)
   = new_page_divider_link(project,page,in_bar)
   = #new_page_task_list_link(project,page,in_bar)
-  = #new_page_upload_link(project,page,in_bar)
+  = new_page_upload_link(project,page,in_bar)
   .clear
