--- a/app/views/uploads/new.haml
+++ b/app/views/uploads/new.haml
@@ -1,1 +1,1 @@
-= render :partial => 'uploads/new', :locals => { :upload => @upload, :comment => @comment }
+= render :partial => 'uploads/new', :locals => { :upload => @upload, :comment => @comment, :page => @page }
