--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -35,6 +35,7 @@ e:compact
 @import pages.sass
 @import pages/notes.sass
 @import pages/dividers.sass
+@import pages/uploads.sass
 
 @import people.sass
 @import time_tracking.sass
