--- a/public/stylesheets/sass/pages.sass
+++ b/public/stylesheets/sass/pages.sass
@@ -156,7 +156,10 @@ div.active_page
 .pageSlot
   :padding 5px 0px
   :padding-bottom 10px
+  div.actionContainer
+    :height 0px
+    :float left
+    :width 100%
 .pageSlot.InsertBefore
   :background-image url(/images/pins.gif)
   :background-repeat repeat-x
-
