--- a/app/views/uploads/_new.haml
+++ b/app/views/uploads/_new.haml
@@ -1,7 +1,9 @@
 #new_upload_iframe
   = error_messages_for :upload
-  - form_for upload, :url => upload_form_url_for(comment), :html => { :multipart => true, :method => :post } do |f|
+  - form_for upload, :url => page.nil? ? upload_form_url_for(comment) : page_upload_form_url_for(page), :html => { :multipart => true, :method => :post } do |f|
     = hidden_field_tag 'iframe', 'true'
+    - if page
+      = page_slot_fields(nil, @insert_id, @insert_before ? '1' : '0')
     .file
       = t('.select_a_file')
       = f.file_field :asset, :size => 25, :id => 'upload_file'
