Page reordering and insert marker now work better

--- a/public/stylesheets/sass/pages.sass
+++ b/public/stylesheets/sass/pages.sass
@@ -155,6 +155,8 @@ div.active_page
 
 .pageSlot
   :padding 5px 0px
+  :padding-left 46px
+  :margin-left -46px
   :padding-bottom 10px
   div.actionContainer
     :height 0px
