--- a/public/stylesheets/sass/pages/dividers.sass
+++ b/public/stylesheets/sass/pages/dividers.sass
@@ -28,6 +28,8 @@
       :height 18px
       :left -32px
       :top 2px
+      img
+        :cursor move
 .new_divider, .edit_divider
   :margin-top 5px
   :padding 10px
