--- a/public/stylesheets/sass/pages/uploads.sass
+++ b/public/stylesheets/sass/pages/uploads.sass
@@ -26,6 +26,8 @@
       :width 32px
       :height 18px
       :top 2px
+      img
+        :cursor move
   .block
     .date
       :margin-right 34px
