--- a/app/views/tasks/_due_on.haml
+++ b/app/views/tasks/_due_on.haml
@@ -1,6 +1,6 @@
 %span.due_on#due_on{ :class => "#{'overdue' if task.overdue? && task.open? }"}
   - if task.due_on
     - if task.overdue?
-      = t('tasks.overdue', :days => task.overdue)
-    - else  
+      = I18n.l(task.due_on, :format => '%b %d') + ' - ' + t('tasks.overdue', :days => task.overdue)
+    - else
       = t('.due_on', :date => I18n.l(task.due_on, :format => '%b %d'))
