Sorting tasks from My Tasks in overview

--- a/app/views/tasks/_due_on.haml
+++ b/app/views/tasks/_due_on.haml
@@ -1,6 +1,11 @@
-%span.due_on#due_on{ :class => "#{'overdue' if task.overdue? && task.open? }"}
+%span.due_on#due_on{ :class => "#{'overdue' if task.open? && task.overdue? } #{'today' if task.open? && task.due_today? }"}
   - if task.due_on
     - if task.overdue?
       = I18n.l(task.due_on, :format => '%b %d') + ' - ' + t('tasks.overdue', :days => task.overdue)
+    - elsif task.due_today?
+      = t('.today')
+    - elsif task.due_tomorrow?
+      = t('.tomorrow')
     - else
-      = t('.due_on', :date => I18n.l(task.due_on, :format => '%b %d'))
+      /= t('.due_on')
+      = I18n.l(task.due_on, :format => '%b %d')
