--- a/public/stylesheets/sass/tasks/item.sass
+++ b/public/stylesheets/sass/tasks/item.sass
@@ -66,6 +66,12 @@ div.task_list_wrap
     span.due_on.overdue
       :color red
       :font-weight bold
+    span.due_on.today
+      :background-color rgb(255,255,150)
+      :padding 0 2px
+      :margin-right 5px
+      :color black
+      :font-weight bold
 
 .active_new,.active_open,.active_hold,.active_resolved,.active_rejected
   :-moz-border-radius 5px
