Updating Readme with the mailing list link, minor tweaks

--- a/public/stylesheets/sass/pages.sass
+++ b/public/stylesheets/sass/pages.sass
@@ -14,7 +14,7 @@ div.active_page
       :margin 5px 0
       :padding-left 20px
 
-.new_pages, .edit_pages
+.new_pages, .create_pages, .edit_pages
   .content 
     h2, form
       :margin-left 20px
