--- a/app/views/emailer/forgot_password.haml
+++ b/app/views/emailer/forgot_password.haml
@@ -6,7 +6,7 @@
 
   .box{ :style => email_box }  
     %p= t('emailer.reset_password.follow_the_link')
-    %h2{ email_text(:big) }
+    %h2{ :style => email_text(:big) }
       = link_to t('emailer.reset_password.log_in'), @url
 
   %p{ :style => email_text(:small) }
