--- a/app/views/emailer/confirm_email.haml
+++ b/app/views/emailer/confirm_email.haml
@@ -6,7 +6,7 @@
 
   .box{ :style => email_box }  
     %p= t('emailer.confirm.follow_the_link')
-    %h2{ email_text(:big) }
+    %h2{ :style => email_text(:big) }
       = link_to t('emailer.confirm.log_in'), @login_link
 
   %p{ :style => email_text(:small) }
