--- a/public/stylesheets/sass/projects/form.sass
+++ b/public/stylesheets/sass/projects/form.sass
@@ -21,3 +21,6 @@ form#new_project, form.edit_project
     label 
       :float none
       :font-size 12px
+  .description
+    :font-size 12px
+    :color rgb(150,150,150)
