Admins can edit settings. Only owners can change owner.

--- a/app/views/shared/_project_navigation.erb
+++ b/app/views/shared/_project_navigation.erb
@@ -94,7 +94,7 @@ render_tabnav :project do
         t.tab_index = 156
       end
 
-      if project.owner?(current_user)
+      if project.admin?(current_user)
         add_tab do |t|
           t.named t('.project_settings')
           t.links_to  project_settings_path(project)
