--- a/app/views/shared/_project_settings_navigation.erb
+++ b/app/views/shared/_project_settings_navigation.erb
@@ -24,6 +24,6 @@ render_tabnav :project do
       t.links_to project_ownership_path :project_id => @current_project.permalink
       t.highlights_on :controller => 'projects', :action => 'edit', :sub_action => 'ownership'
       t.li_class = 'ownership'
-    end  
+    end if @current_project.owner?(current_user)
 end
 %><div class="clear"></div></div>
