--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -115,25 +115,7 @@
       img
         :vertical-align middle
       span  
-        :vertical-align middle  
-  div.projects_dropdown_wrap
-    :float left
-  div.projects_dropdown
-    :width 330px
-    :position absolute
-    :padding 10px
-    :background rgb(120,120,120)  
-    :-moz-border-radius 8px
-    :-webkit-border-radius 8px
-    div.project_dropdown
-    a  
-      :display block
-      :font-size 15px
-      :color rgb(255,255,255)
-      :padding 10px
-    a:hover
-      :background rgb(140,140,140)
-      :color rgb(255,255,0)
+        :vertical-align middle
 div.user_navigation, div.task_navigation, div.project_settings_navigation, div.project_column_navigation
   ul
     :list-style-type none
@@ -168,3 +150,47 @@ div.project_settings_navigation
       :color rgb(255,255,0)
       :background rgb(200,0,0)
       :border solid 1px rgb(200,0,0)
+
+#projects_tab
+  :display block
+  :float none
+
+#projects_tab_list
+  li
+    :float none	
+    :-moz-border-radius 0px
+    :-webkit-border-radius 0px
+    :max-width 300px
+    :width 300px
+    :margin-right 1px
+    a
+      :padding 0px
+      :-moz-border-radius 0px
+      :-webkit-border-radius 0px
+    a.proj
+      :padding 3px 5px
+    .quicklinks
+      :float right
+      :padding 3px 0px
+      img
+        margin: 0px 2px
+
+#projects_tab_container
+  ul
+    :float left
+    :position absolute
+    :margin-left 0px
+    :background-color #ffffff
+    :-moz-border-radius 5px
+    :-webkit-border-radius 5px
+    :-moz-border-top-left-radius 0px
+    :-webkit-border-top-left-radius 0px
+    :border 2px solid #cccccc
+    :display none
+
+#projects_tab_container:hover
+  #projects_tab
+    :background-color #cccccc
+  ul
+    :display block
+
