Project list width now in CSS

--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -169,6 +169,7 @@ div.project_settings_navigation
       :-webkit-border-radius 0px
     a.proj
       :padding 3px 5px
+      :width 220px
     .quicklinks
       :float right
       :padding 3px 0px
