--- a/app/views/shared/_projects_dropdown.haml
+++ b/app/views/shared/_projects_dropdown.haml
@@ -1,7 +1,7 @@
 %ul#projects_tab_list
   - projects.each do |project|
     %li
-      = link_to(truncate(project.name, :length => 30), project_url(project), :style => 'width:220px;', :class => 'proj')
+      = link_to(truncate(project.name, :length => 30), project_url(project), :class => 'proj')
       .quicklinks
         = quicklink_conversations(project)
         = quicklink_tasks(project)
